--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Тестовая страница</title>
+    <meta http-equiv="refresh" content="0; url=resume"/>
 </head>
 <body>
-<h2>Закрыта на ремонт, пока</h2>
+<p><a href="resume">Resume List</a></p>
 </body>
 </html>
